<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_rus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/rus_hint">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rus_input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:digits="@string/ru_alphabet"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_top"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/input_layout_rus"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/en_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/en_input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:digits="@string/en_alphabet"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ru_to_en_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        app:layout_constraintTop_toBottomOf="@id/input_layout_en"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/ru_to_en"
        android:background="@color/teal_200"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/en_to_ru_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        app:layout_constraintTop_toBottomOf="@id/input_layout_en"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/en_to_ru"
        android:background="@color/teal_200"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_line_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/guide_line_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>